# factorio-bp-editor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: analyze_blueprint_file.py  basic_usage.py  blueprint_operations.py
src/factorio_bp_editor/: __init__.py  editor.py
tests/: test_editor.py
